--- a/app/code/Hamper/BasketMoreInfo/view/frontend/templates/cart/item/more_info.phtml
+++ b/app/code/Hamper/BasketMoreInfo/view/frontend/templates/cart/item/more_info.phtml
@@ -13,12 +13,19 @@ $isVisibleProduct = $product->isVisibleInSiteVisibility();
 /** @var \Magento\Msrp\Helper\Data $helper */
 $helper = $this->helper(Magento\Msrp\Helper\Data::class);
 $canApplyMsrp = $helper->isShowBeforeOrderConfirm($product) && $helper->isMinimalPriceLessMsrp($product);
+$productDescription = $objectManager->get('Magento\Catalog\Model\Product')
 ?>
 
 
 <div>
     <p>Item Info</p>
     <?= $block->getImage($block->getProductForThumbnail(), 'cart_page_product_thumbnail')->toHtml() ?>
+    <p><?= $block->escapeHtml($_item->getId()) ?></p>
+    <p><?= $block->escapeHtml($_item->getproduct()->getShortDescription()) ?></p>
+    <p><?= $block->escapeHtml($_item->getproduct()->getData('description')) ?></p>
+    <p><?= $block->escapeHtml($_item->getSku()) ?></p>
+    <p><?= $block->escapeHtml($block->getText()) ?></p>
+
 </div>
 
 
